Contact form forces phone to use correct keyboard for imporved UX on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1048,6 +1048,19 @@ footer img {
     color: #9a9a9a;
 }
 
+.input-contact input[type="email"] {
+    height: 100%;
+    width: 100%;
+    border: 0;
+    padding: 0 20px;
+    float: left;
+    position: relative;
+    background-color: transparent;
+    z-index: 2;
+    font-size: 14px;
+    color: #9a9a9a;
+}
+
 .input-contact > span {
     position: absolute;
     top: 50%;
